# linkedin-ghost-jobs-etl

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  GITHUB_PREP_SUMMARY.md  LICENSE  Makefile  README.md  WINDOWS_SCHEDULER_SETUP.md  complete_finland_pipeline.py  docker-compose-airflow.yml  docker-compose.yml  finland_ghost_jobs_analyzer.py  finland_job_seeker_guide.py  linkedin_finland_scraper.py  prepare_for_github.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_etl_daily.bat  run_etl_scheduler.bat  setup_windows_scheduler.bat  visualize_data.py  windows_dag_executor.py  windows_dag_scheduler.py
airflow/dags/: ghost_job_etl.py
data/outputs/: finland_job_analysis.json  quick_test_20250923_114507.json
data/raw/: .gitkeep
data/transformed/: .gitkeep
docs/: business-rules.md  pipeline_flow.md  schema.md
notebooks/: ghost_job_analysis_complete.ipynb
scripts/: entrypoint.sh  setup.sh
src/: main.py
src/config/: logging_config.py  settings.py
src/extract/: ats_api.py  linkedin_api.py
src/load/: database_loader.py
src/transform/: data_cleaning.py  ghost_job_rules.py  posting_frequency_analyzer.py
src/utils/: data_validator.py  date_utils.py
tests/: test_extract.py  test_finland_analyzer.py  test_finland_job_seeker_guide.py  test_load.py  test_transform.py
